[FIX][UI] Fix color contrast issues in Darkshine theme for WAI compliance

--- a/themes/darkshine/css/newsletter.css
+++ b/themes/darkshine/css/newsletter.css
@@ -1,6 +1,6 @@
 /* Dark Shine theme newsletter stylesheet  */
 body {
-  background: #90140c;
+  background: #f3f3f3;
   color: #212529;
   font-family: Arial, sans-serif;
   padding: 15px;
@@ -36,4 +36,3 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 body {
   background: #f3f3f3;
 }
-/*# sourceMappingURL=newsletter.css.map */
