--- a/themes/darkshine/scss/_variables.scss
+++ b/themes/darkshine/scss/_variables.scss
@@ -2,68 +2,89 @@
 
 // - - - - - - - Bootstrap variables (override values in vendor_bundled/vendor/twbs/bootstrap/scss/_variables.scss - - - - - - //
 
-// Colors
-$black: #212529;
-$gray-900: #212529;
-$gray-800: #e9ecef;
-$gray-700: #dee2e6;
-$gray-600: #ced4da;
-$gray-500: #adb5bd;
-$gray-400: #868e96;
-$gray-300: #495057;
-$gray-200: #343a40;
-$gray-100: #212529;
-$white: #fff;
+// Color system
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$black:    #000 !default;
 
-$primary: #fd7931;
-$secondary: #feb768;
-$success: #24a238;
-$info: #0089f0;
-$warning: #d0d024;
-$danger: #d9534f;
+$primary: #C04402; // #CF4A02; // #fd7931;
+$secondary: #A75A01; // #B25F01; // #feb768;
+$success: #1B7E2B; // #1D872E; // #24a238;
+$info: #0071C7; // 0089f0;
+$warning: #717113; // #d0d024;
+$danger: #CD322D; // #D4403A; // #d9534f;
 
 $black: $gray-900;
 
 $theme-colors: (
-     "primary":            #fd7931,
-     "secondary":         #feb768,
-     "success":             #24a238,
-     "info":               #0089f0,
-     "warning":             #d0d024,
-     "danger":              #d9534f,
-    "light":            #ffffff,
-     "dark":                #000000
+     "primary":        #C04402, // #CF4A02, // #fd7931,
+     "secondary":      #A75A01, // #B25F01, // #feb768,
+     "success":        #1B7E2B, // #1D872E, // #24a238,
+     "info":           #0071C7, // #0089f0,
+     "warning":        #717113, // #d0d024,
+     "danger":         #CD322D, // #D4403A, // #d9534f,
+    "light":           #ffffff,
+     "dark":           #000000
 );
 
 $min-contrast-ratio:   3;
 
 // Options
+// Gradient
 // Spacing
+// Position
 
 // Body
-$body-bg: #90140c;
+$body-bg: #f3f3f3;// (Actually, container bg, whereas actual body bg is #90140c;)
+$body-color: #212529;
+
+// Utilities maps
 
 // Links
 $link-color: #600000;
 $link-hover-color: darken($link-color, 15%);
 
-// Fonts
+// Paragraphs
+// Grid breakpoints
+// Grid containers
+// Grid columns
+// Container padding
+// Components
+$component-active-color: #140000;
+$component-active-bg: #fd7c32;
+
+
+// Typography
 $font-family-sans-serif: Arial, sans-serif;
 $font-family-base: $font-family-sans-serif;
 $headings-color: #8a0700;
+$blockquote-footer-color: #485060;
 
 // Tables
+// Buttons + Forms
 // Buttons
-
-// Components
-$component-active-color: #ffffff;
-$component-active-bg: #fd7c32;
-
 // Forms
-// Dropdowns
-// Navs
-// Navbar
+$input-bg: #fff;
+$input-group-addon-bg: #E9ECEF;
+$form-text-color: #485060;
 
+// Form validation
+$form-feedback-valid-color: #1B7E2B;
+$form-feedback-invalid-color: #C9312C;
+
+// Z-index master list
+// Navs
+$nav-link-disabled-color: #666E75;
+
+// Navbar
 $navbar-light-color:                rgba($black, .5) !default;
 $navbar-light-hover-color:          rgba($black, .7) !default;
 $navbar-light-active-color:         rgba($black, .9) !default;
@@ -73,12 +94,24 @@ $navbar-light-disabled-color:       rgba($black, .3) !default;
 //$nav-tabs-border-color: lighten( $body-bg, 90% );
 //$nav-tabs-link-hover-border-color: lighten( $nav-tabs-border-color, 10% );
 //$nav-tabs-active-link-hover-bg: darken( $nav-tabs-border-color, 10% );
+$nav-tabs-link-active-bg: #C04802; // Actually a gradient is used but this value fixes contrast error
 
+// Dropdowns
 // Pagination
-// Jumbotron
+
+// Placeholders
 // Cards
+// Accordion
+$accordion-color:                         $body-color;
+$accordion-bg:                            #fff;
+$accordion-button-active-color: #000;
+
+//$accordion-border-width:                  $border-width !default;
+$accordion-border-color:                  rgba($black, .125) !default;
+
 // Tooltips
 // Popovers
+// Toasts
 // Badges
 // Modals
 // Alerts
@@ -86,17 +119,21 @@ $navbar-light-disabled-color:       rgba($black, .3) !default;
 // List group
 // Image thumbnails
 // Figures
-// Breadcrumbs
-// Carousel
+$figure-caption-color: #485060;
 
+// Breadcrumbs
+$breadcrumb-active-color: #687078;
+// Carousel
+// Spinners
 // Close
 $close-font-weight: bold;
 $close-color: #000000;
 $close-text-shadow: 0 1px 0 #ffffff;
 
+// Offcanvas
 // Code
 $code-color: #c7254e;
-$code-bg: #f9f2f4;
+$kbd-bg: #f9f2f4;
 
 $kbd-color: #ffffff;
 $kbd-bg: #333333;
